--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -183,8 +183,8 @@ K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter
 BP_Tide_1_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,
 K2Node_CallParentFunction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,
 K2Node=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-PostProcessVolume=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,PostProcessVolume.Lens.Lens
-BrushComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,PostProcessVolume.Lens.Lens
+PostProcessVolume=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,PostProcessVolume.Lens.Lens,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+BrushComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
 BP_Tide_2_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,
 BP_Tide_0_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 BP_Tide_3_C=
@@ -193,7 +193,7 @@ BP_Tide_5_C=
 BP_Tide_6_C=
 BP_Rotation_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 K2Node_Timeline=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-StaticMeshActor=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,
+StaticMeshActor=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Bloom,PostProcessVolume.Lens.Lens|ExposureAdvanced,PostProcessVolume.Lens.Lens|Exposure,PostProcessVolume.Lens.Lens|Dirt Mask,PostProcessVolume.Lens.Lens|Local Exposure,PostProcessVolume.Color Grading.Color Grading|Misc,PostProcessVolume.Rendering Features.Rendering Features|Ambient Cubemap,PostProcessVolume.Rendering Features.Rendering Features|PathTracing,
 StaticMeshComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 BP_Star_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 EdGraphNode=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -232,7 +232,7 @@ BP_Punch_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.Trans
 BP_Pendulum_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 DirectionalLight=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 SkyLight=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,
-ExponentialHeightFog=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,PostProcessVolume.Lens.Lens
+ExponentialHeightFog=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,PostProcessVolume.Lens.Lens,
 BP_Turntable_Hollow_Star_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_CustomEvent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 K2Node_CallFunction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,
@@ -352,7 +352,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.Show
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Player/Sucrose
+ContentBrowserTab1.SelectedPaths=/Game/Model/Decoration/shrimp
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -414,7 +414,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Fog/texture
+ContentBrowserDrawer.SelectedPaths=/Game/Model/Decoration/bam
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -452,7 +452,7 @@ ContentBrowserTab2.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab2.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab2.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab2.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab2.SelectedPaths=/Game/Actor/RoundTable
+ContentBrowserTab2.SelectedPaths=/Game/Model/Decoration/bam
 ContentBrowserTab2.PluginFilters=
 ContentBrowserTab2.Favorites.SelectedPaths=
 ContentBrowserTab2.SelectedCollections=
@@ -786,7 +786,7 @@ MaterialExpressionComment="\"Object\" "
 MaterialExpressionDistance="\"Object\" "
 MaterialExpressionMultiply="\"Object\" "
 MaterialExpressionOneMinus="\"Object\" "
-StaticMeshActor="\"Object\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshActor="\"Object\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.OverrideMaterials\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MaterialExpressionComponentMask="\"Object\" "
 MaterialExpressionTextureSampleParameter2D="\"Object\" "
 MaterialExpressionTextureSampleParameter="\"Object\" "
@@ -803,12 +803,8 @@ MaterialExpressionLinearInterpolate="\"Object\" "
 MaterialExpressionSmoothStep="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Player/ABP_Player.ABP_Player
-OpenAssetsAtExit=/Game/Player/Sucrose/Animations/Sucrose_jumpfall.Sucrose_jumpfall
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Actor/BP_SavePoint.BP_SavePoint
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3364,30 +3360,35 @@ StaticMeshActor.MaterialParameters=True
 StaticMesh.Thumbnail=True
 StaticMesh.LevelOfDetail=True
 PersonaPreviewSceneDescription.Animation Blueprint=True
+BP_SavePoint_C.Default=True
+StaticMeshActor.AssetUserData=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/BP_SavePoint
-MRUItem1=/Game/Player/ABP_Sucrose
-MRUItem2=/Game/BattleWizardPolyart/Animations/JumpEndAnim
+MRUItem0=/Game/Model/Decoration/shrimp/cover
+MRUItem1=/Game/Fog/M_LocalVolumetricFog_Inst
+MRUItem2=/Game/Actor/BP_SavePoint
 MRUItem3=/Game/Player/BP_Player
 MRUItem4=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
-MRUItem5=/Game/Player/Sucrose/Animations/Sucrose_jump1
-MRUItem6=/Game/Player/ABP_Player
-MRUItem7=/Game/Fog/M_LocalVolumetricFog_Inst
-MRUItem8=/Engine/BasicShapes/Cube
-MRUItem9=/Game/Fog/M_LocalVolumetricFog
-MRUItem10=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem11=/Game/Model/SavePlat/SavePlat
-MRUItem12=/Game/Actor/BP_Star
-MRUItem13=/Game/Widget/WBP_View
-MRUItem14=/Game/Widget/WBP_Win
-MRUItem15=/Game/Actor/BP_Static
-MRUItem16=/Game/BattleWizardPolyart/Animations/JumpStartAnim
-MRUItem17=/Game/BattleWizardPolyart/Animations/Idle01Anim
-MRUItem18=/Game/Actor/BP_Seesaw_ObSwing
-MRUItem19=/Game/Actor/BP_Seesaw_Base
+MRUItem5=/Game/Player/ABP_Player
+MRUItem6=/Game/Player/ABP_Sucrose
+MRUItem7=/Game/BattleWizardPolyart/Animations/JumpEndAnim
+MRUItem8=/Game/Player/Sucrose/Animations/Sucrose_jump1
+MRUItem9=/Engine/BasicShapes/Cube
+MRUItem10=/Game/Fog/M_LocalVolumetricFog
+MRUItem11=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem12=/Game/Model/SavePlat/SavePlat
+MRUItem13=/Game/Actor/BP_Star
+MRUItem14=/Game/Widget/WBP_View
+MRUItem15=/Game/Widget/WBP_Win
+MRUItem16=/Game/Actor/BP_Static
+MRUItem17=/Game/BattleWizardPolyart/Animations/JumpStartAnim
+MRUItem18=/Game/BattleWizardPolyart/Animations/Idle01Anim
+MRUItem19=/Game/Actor/BP_Seesaw_ObSwing
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Model/Decoration/shrimp/shrimp.shrimp;
+RecentlyPlaced=/Game/Model/Decoration/bam/zhenglong.zhenglong;
 RecentlyPlaced=/Game/Fog/M_LocalVolumetricFog_Inst.M_LocalVolumetricFog_Inst;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Actor/BP_Star.BP_Star;
@@ -3405,9 +3406,6 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_M.BP_HollowTable_Ring_
 RecentlyPlaced=/Game/Actor/BP_Seesaw_Base.BP_Seesaw_Base;
 RecentlyPlaced=/Game/Actor/BP_Hammer_Base.BP_Hammer_Base;
 RecentlyPlaced=/Game/Actor/BP_Rover_Base.BP_Rover_Base;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_3way.BP_RoundTable_3way;
-RecentlyPlaced=/Game/Actor/BP_Gate_Solid.BP_Gate_Solid;
-RecentlyPlaced=/Game/Actor/RoundTable/BP_RoundTable_Cross_L.BP_RoundTable_Cross_L;
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Meshes/SM_Cube.SM_Cube=1
@@ -4827,7 +4825,6 @@ Warning_EditingDefaultMaterial=False
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [WidgetTemplatesExpanded]
 编辑器=False
