修复了不会重生的吧ug
1

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -352,7 +352,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.Show
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Model/Decoration/egg
+ContentBrowserTab1.SelectedPaths=/Game/Player/Sucrose/Animations
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -466,7 +466,7 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Event.Event\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -805,6 +805,9 @@ MaterialExpressionSmoothStep="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Player/ABP_Player.ABP_Player
+OpenAssetsAtExit=/Game/Player/Sucrose/Animations/Sucrose_jump2.Sucrose_jump2
+OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3364,26 +3367,26 @@ BP_SavePoint_C.Default=True
 StaticMeshActor.AssetUserData=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Model/Decoration/shrimp/cover
-MRUItem1=/Game/Fog/M_LocalVolumetricFog_Inst
-MRUItem2=/Game/Actor/BP_SavePoint
-MRUItem3=/Game/Player/BP_Player
-MRUItem4=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
-MRUItem5=/Game/Player/ABP_Player
-MRUItem6=/Game/Player/ABP_Sucrose
-MRUItem7=/Game/BattleWizardPolyart/Animations/JumpEndAnim
-MRUItem8=/Game/Player/Sucrose/Animations/Sucrose_jump1
-MRUItem9=/Engine/BasicShapes/Cube
-MRUItem10=/Game/Fog/M_LocalVolumetricFog
-MRUItem11=/Engine/EngineMaterials/WorldGridMaterial
-MRUItem12=/Game/Model/SavePlat/SavePlat
-MRUItem13=/Game/Actor/BP_Star
-MRUItem14=/Game/Widget/WBP_View
-MRUItem15=/Game/Widget/WBP_Win
-MRUItem16=/Game/Actor/BP_Static
-MRUItem17=/Game/BattleWizardPolyart/Animations/JumpStartAnim
-MRUItem18=/Game/BattleWizardPolyart/Animations/Idle01Anim
-MRUItem19=/Game/Actor/BP_Seesaw_ObSwing
+MRUItem0=/Game/Player/Sucrose/Animations/Sucrose_jump2
+MRUItem1=/Game/Player/Sucrose/Animations/Sucrose_jump1
+MRUItem2=/Game/Player/BP_Player
+MRUItem3=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
+MRUItem4=/Game/Player/ABP_Player
+MRUItem5=/Game/Model/Decoration/shrimp/cover
+MRUItem6=/Game/Fog/M_LocalVolumetricFog_Inst
+MRUItem7=/Game/Actor/BP_SavePoint
+MRUItem8=/Game/Player/ABP_Sucrose
+MRUItem9=/Game/BattleWizardPolyart/Animations/JumpEndAnim
+MRUItem10=/Engine/BasicShapes/Cube
+MRUItem11=/Game/Fog/M_LocalVolumetricFog
+MRUItem12=/Engine/EngineMaterials/WorldGridMaterial
+MRUItem13=/Game/Model/SavePlat/SavePlat
+MRUItem14=/Game/Actor/BP_Star
+MRUItem15=/Game/Widget/WBP_View
+MRUItem16=/Game/Widget/WBP_Win
+MRUItem17=/Game/Actor/BP_Static
+MRUItem18=/Game/BattleWizardPolyart/Animations/JumpStartAnim
+MRUItem19=/Game/BattleWizardPolyart/Animations/Idle01Anim
 
 [PlacementMode]
 RecentlyPlaced=/Game/Model/Decoration/egg/egg.egg;
@@ -3608,6 +3611,8 @@ RecentlyPlaced=/Game/Actor/RoundTable/BP_HollowTable_Ring_L.BP_HollowTable_Ring_
 /Game/Fog/M_LocalVolumetricFog.M_LocalVolumetricFog=1
 /Game/Fog/M_LocalVolumetricFog_Inst.M_LocalVolumetricFog_Inst=1
 /Engine/BasicShapes/Cube.Cube=1
+/Game/Player/Sucrose/Animations/Sucrose_jump1.Sucrose_jump1=1
+/Game/Player/Sucrose/Animations/Sucrose_jump2.Sucrose_jump2=1
 
 [MessageLog]
 LastLogListing=FBXImport
@@ -3709,7 +3714,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../GitHub/Project_Jump/Content/Level
+UNR=../../../../../Project/Project_Jump/Content/Level
 BRUSH=../../../../../Project/Project_Jump/Project_Jump/Content/
 FBX=../../../../../Project/Project_Jump/Project_Jump/Content/
 FBXAnim=../../../../../Project/Project_Jump/Project_Jump/Content/
@@ -4742,9 +4747,9 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
+RecentsFiles=E:/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Programs Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE/editor/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
-RecentsFiles=E:/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
