修复了传送魔毯会掉头的bug

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,WorldSettings.GameMode.SelectedGameModeDetails,
 BP_Player_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
-SkeletalMeshComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
+SkeletalMeshComponent=
 SpringArmComponent=SpringArmComponent.TransformCommon.Transform,
 CharacterMovementComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,BP_Player_C.Physics.ConstraintsGroup,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 Blueprint=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
@@ -352,7 +352,7 @@ GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.Show
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Player/Sucrose/Animations
+ContentBrowserTab1.SelectedPaths=/Game/Actor
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -368,7 +368,7 @@ ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserTab1.PluginFilters=
-ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.Favorites.SelectedPaths=/Game/Actor
 FavoritePaths=/Game/Actor,/Game/Player,/Game/Curve,/Game/Meterial
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -466,16 +466,16 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Event.Event\" "
+Object="\"Object\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" "
+PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object\" "
+MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 StaticMesh="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0].Rotation\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 StreamableRenderAsset="\"Object\" \"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0].Rotation\" \"Object.StaticMesh.BodySetup.Object.WalkableSlopeOverride\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 AssetViewerSettings="\"Object\" "
@@ -808,6 +808,7 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Player/ABP_Player.ABP_Player
 OpenAssetsAtExit=/Game/Player/Sucrose/Animations/Sucrose_jump2.Sucrose_jump2
 OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
+OpenAssetsAtExit=/Game/Actor/BP_SavePoint.BP_SavePoint
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3367,14 +3368,14 @@ BP_SavePoint_C.Default=True
 StaticMeshActor.AssetUserData=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Player/Sucrose/Animations/Sucrose_jump2
-MRUItem1=/Game/Player/Sucrose/Animations/Sucrose_jump1
-MRUItem2=/Game/Player/BP_Player
-MRUItem3=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
-MRUItem4=/Game/Player/ABP_Player
-MRUItem5=/Game/Model/Decoration/shrimp/cover
-MRUItem6=/Game/Fog/M_LocalVolumetricFog_Inst
-MRUItem7=/Game/Actor/BP_SavePoint
+MRUItem0=/Game/Actor/BP_SavePoint
+MRUItem1=/Game/Player/BP_Player
+MRUItem2=/Game/Player/Sucrose/Animations/Sucrose_jump2
+MRUItem3=/Game/Player/ABP_Player
+MRUItem4=/Game/Player/Sucrose/Animations/Sucrose_jump1
+MRUItem5=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
+MRUItem6=/Game/Model/Decoration/shrimp/cover
+MRUItem7=/Game/Fog/M_LocalVolumetricFog_Inst
 MRUItem8=/Game/Player/ABP_Sucrose
 MRUItem9=/Game/BattleWizardPolyart/Animations/JumpEndAnim
 MRUItem10=/Engine/BasicShapes/Cube
