--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -466,7 +466,7 @@ LastLevel=/Game/Level/Map_Main
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 LocalizationTargetSet="\"Object\" "
 LocalizationTarget="\"Object\" "
 CapsuleComponent="\"Object\" "
@@ -805,10 +805,6 @@ MaterialExpressionSmoothStep="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Player/ABP_Player.ABP_Player
-OpenAssetsAtExit=/Game/Player/Sucrose/Animations/Sucrose_jump2.Sucrose_jump2
-OpenAssetsAtExit=/Game/Player/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/Actor/BP_SavePoint.BP_SavePoint
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3698,7 +3694,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=30.000 Y=0.000
-WindowSize=X=1310.000 Y=816.000
+WindowSize=X=1312.000 Y=818.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3715,7 +3711,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../Project/Project_Jump/Content/Level
+UNR=../../../../../../GitHub/Project_Jump/Content/Level
 BRUSH=../../../../../Project/Project_Jump/Project_Jump/Content/
 FBX=../../../../../Project/Project_Jump/Project_Jump/Content/
 FBXAnim=../../../../../Project/Project_Jump/Project_Jump/Content/
@@ -4748,8 +4744,8 @@ PhysicsAssetEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/Programs Files/Unreal Engine/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/Unreal/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/UE/editor/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
