--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -174,9 +174,9 @@ Blueprint=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.Transf
 BP_ThirdPersonCharacter_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 K2Node_EnhancedInputAction=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,
 CameraComponent=CameraComponent.TransformCommon.Transform,BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.PostProcess.Lens,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
-CapsuleComponent=
+CapsuleComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,
 BP_Tide_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
-SceneComponent=
+SceneComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,
 K2Node_VariableGet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 PropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 K2Node_VariableSet=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
@@ -220,7 +220,7 @@ BP_Turntable_Star_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacte
 Object=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,
 WBP_View_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 EdGraph=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
-SphereComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
+SphereComponent=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,StaticMeshActor.Materials.MaterialList,StaticMeshActor.TransformCommon.Transform,StaticMeshActor.Physics.ConstraintsGroup,PostProcessVolume.Lens.Lens,
 BP_Overturn_Base_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,
 BP_Turntable_Hollow_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
 BP_Once_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,
@@ -292,7 +292,7 @@ PlayerController=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C
 StaticMesh=StaticMesh.ImportSettings.Mesh,StaticMesh.LOD0.MeshBuildSettings,StaticMesh.LOD0.MeshReductionSettings,StaticMesh.ImportSettings.Transform,StaticMesh.ImportSettings.Miscellaneous,StaticMesh.ImportSettings.File Path,
 SkyAtmosphere=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 ABP_Sucrose_C=
-WBP_Win_C=
+WBP_Win_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 Map_Main_C=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 MulticastInlineDelegatePropertyWrapper=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
 AnimGraphNode_BlendSpacePlayer=BP_Player_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.TransformCommon.Transform,SkeletalMeshComponent.TransformCommon.Transform,CameraComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableSet.DefaultValueCategory.Velocity,BP_Player_C.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Collision.Collision,CameraComponent.PostProcess.Lens,SphereComponent.Collision.Collision,BoxComponent.Collision.Collision,
@@ -573,8 +573,8 @@ SphereComponent="\"Object\" "
 Image="\"Object\" \"Object.Appearance.Brush\" "
 Widget="\"Object\" "
 Visual="\"Object\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Button Slot.Padding\" "
 WBP_View_C="\"Object\" "
 UserWidget="\"Object\" "
 WidgetBlueprint="\"Object\" "
@@ -806,9 +806,14 @@ BoneProxy="\"Object\" "
 K2Node_SwitchString="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Actor/BP_SavePoint.BP_SavePoint
+OpenAssetsAtExit=/Game/Actor/RoundTable/BP_WindMill_Base_M.BP_WindMill_Base_M
+OpenAssetsAtExit=/Game/Actor/RoundTable/BP_WindMill_Base.BP_WindMill_Base
+OpenAssetsAtExit=/Game/Actor/RoundTable/BP_WindMill_Base_L.BP_WindMill_Base_L
+OpenAssetsAtExit=/Game/Widget/WBP_Win.WBP_Win
+OpenAssetsAtExit=/Game/Widget/WBP_Start.WBP_Start
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -3376,26 +3381,26 @@ BP_Seesaw_Swing1_C.Default=True
 K2Node_SwitchString.PinOptions=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Actor/BP_SavePoint
-MRUItem1=/Game/Player/BP_Player
-MRUItem2=/Game/Widget/WBP_Win
-MRUItem3=/Game/Actor/BP_Star
-MRUItem4=/Game/Actor/BP_Gate_Base
-MRUItem5=/Game/Model/Gate_Base/gateBase
-MRUItem6=/Game/Player/Sucrose/Sucrose
-MRUItem7=/Game/Player/Sucrose/Sucrose_PhysicsAsset
-MRUItem8=/Game/Player/Sucrose/Animations/Sucrose_jump1
-MRUItem9=/Game/Player/Sucrose/Sucrose_Skeleton
-MRUItem10=/Game/Player/Sucrose/hat/hat
-MRUItem11=/Game/UI/UI_Start_BGI
-MRUItem12=/Game/Player/Sucrose/Animations/Sucrose_jump2
-MRUItem13=/Game/Player/ABP_Player
-MRUItem14=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
-MRUItem15=/Game/Model/Decoration/shrimp/cover
-MRUItem16=/Game/Fog/M_LocalVolumetricFog_Inst
-MRUItem17=/Game/Player/ABP_Sucrose
-MRUItem18=/Game/BattleWizardPolyart/Animations/JumpEndAnim
-MRUItem19=/Engine/BasicShapes/Cube
+MRUItem0=/Game/Widget/WBP_Start
+MRUItem1=/Game/Widget/WBP_Win
+MRUItem2=/Game/Actor/RoundTable/BP_WindMill_Base_L
+MRUItem3=/Game/Actor/RoundTable/BP_WindMill_Base
+MRUItem4=/Game/Actor/RoundTable/BP_WindMill_Base_M
+MRUItem5=/Game/Actor/BP_SavePoint
+MRUItem6=/Game/Player/BP_Player
+MRUItem7=/Game/Actor/BP_Star
+MRUItem8=/Game/Actor/BP_Gate_Base
+MRUItem9=/Game/Model/Gate_Base/gateBase
+MRUItem10=/Game/Player/Sucrose/Sucrose
+MRUItem11=/Game/Player/Sucrose/Sucrose_PhysicsAsset
+MRUItem12=/Game/Player/Sucrose/Animations/Sucrose_jump1
+MRUItem13=/Game/Player/Sucrose/Sucrose_Skeleton
+MRUItem14=/Game/Player/Sucrose/hat/hat
+MRUItem15=/Game/UI/UI_Start_BGI
+MRUItem16=/Game/Player/Sucrose/Animations/Sucrose_jump2
+MRUItem17=/Game/Player/ABP_Player
+MRUItem18=/Game/Player/Sucrose/Animations/Sucrose_jumpfall
+MRUItem19=/Game/Model/Decoration/shrimp/cover
 
 [PlacementMode]
 RecentlyPlaced=/Game/Model/Decoration/egg/egg.egg;
